--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@neondatabase/serverless": "^0.9.5",
     "drizzle-orm": "^0.33.0",
-    "next": "14.2.7",
+    "next": "^14.2.8",
     "pg": "^8.12.0",
     "react": "^18",
     "react-dom": "^18"
